// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescriptionField should return element when description is being passed as props 1`] = `
<div
  className="help"
>
  SOME THING
</div>
`;

exports[`DescriptionField should return element when description is being passed as props for object 1`] = `
<div
  className="description-field"
>
  SOME THING
</div>
`;
